# PracticumSem2FMI

./: CMakeLists.txt
_02_22_2023/: Zad1.cpp  Zad2.cpp  Zad3.cpp
_03_01_2023/: Zad1.cpp  Zad2.cpp  Zad3.cpp  Zad7.cpp
_03_07_2023/: Zad1.cpp  Zad2.cpp
_03_22_2023/: Exercise.cpp  Exercise.h  Teacher.cpp  Teacher.h  Test.cpp  Test.h  Zad1.cpp  Zad2.cpp
_04_19_2023/: ChatSystem.cpp  ChatSystem.h  Message.cpp  Message.h  User.cpp  User.h  Zad1.cpp
dancho/: MyVector.cpp  MyVector.h
dr_1/: Column.cpp  Column.h  ConfigConst.h  HelperFunctions.cpp  HelperFunctions.h  MarkdownTableParser.cpp  MarkdownTableParser.h  Menu.cpp  Menu.h  Row.cpp  Row.h  Value.cpp  Value.h  Zad1.cpp
dr_1/Zad1/: Column.h  MarkdownTableParser.cpp  MarkdownTableParser.h  Value.cpp  Zad1.cpp
dr_1/Zad2/: Zad2.cpp
dr_1/Zad2/Consts/: ConfigConsts.h
dr_1/Zad2/Date/: Date.h
dr_1/Zad2/DateTime/: DateTime.cpp  DateTime.h
dr_1/Zad2/File/: File.cpp  File.h
dr_1/Zad2/FileSystem/: FileSystem.cpp  FileSystem.h
dr_1/Zad2/RightsGroup/: RightsGroup.cpp  RightsGroup.h
dr_1/Zad2/RightsManager/: RightsManager.h  RightsManger.cpp
dr_1/Zad2/SortOptions/: SortOptions.h
dr_2/: Zad2.cpp
dr_2/Zad1/: Documentation.txt  MyString.cpp  MyString.h  Zad1.cpp
dr_2/Zad2/: Consts.h  MyString.cpp  MyString.h  StringCreater.cpp  StringCreator.h  StringPiece.cpp  StringPiece.h  Zad2.cpp
dr_3/: Dr3.cpp
dr_3/Sets/: SetByCriteria.hpp  SetIntersection.cpp  SetIntersection.h  SetUnion.cpp  SetUnion.h
dr_3/Sets/Predicates/: PreciateExactContains.cpp  PredicateNoDivision.h  PredicateOneDivision.cpp  PredicateOneDivision.h
dr_3/Utils/: MyString.cpp  MyString.h  MyVector.hpp
dr_3/zad_1/: Dr3.cpp  Zad1.cpp
dr_3/zad_1/Menu/: Menu.cpp  Menu.h
dr_3/zad_1/Sets/: Set.h  SetByCriteria.hpp  SetIntersection.cpp  SetIntersection.h  SetLoader.cpp  SetLoader.h  SetUnion.cpp  SetUnion.h
dr_3/zad_2/: PriorityQueue.hpp  Zad2.cpp
practicum_project/: Main.cpp
practicum_project/Cells/BasicCell/: BasicCell.cpp  BasicCell.h
practicum_project/Cells/CellsFactory/: CellsFactory.cpp  CellsFactory.h
practicum_project/Cells/DoubleCell/: DoubleCell.cpp  DoubleCell.h
practicum_project/Cells/EmptyCell/: EmptyCell.cpp  EmptyCell.h
practicum_project/Cells/FormulaCell/: FormulaCell.cpp  FormulaCell.h
practicum_project/Cells/IntCell/: IntCell.cpp  IntCell.h
practicum_project/Cells/StringCell/: StringCell.cpp  StringCell.h
practicum_project/Commands/BasicComand/: BasicCommand.cpp  BasicCommand.h
practicum_project/Commands/CloseTableCommand/: CloseTableCommand.cpp  CloseTableCommand.h
practicum_project/Commands/CommandFactory/: CommandFactory.cpp  CommandFactory.h
practicum_project/Commands/EditTableCommand/: EditTableCommand.cpp  EditTableCommand.h
practicum_project/Commands/ExitCommand/: ExitCommand.cpp  ExitCommand.h
practicum_project/Commands/InvalidCommand/: InvalidCommand.cpp  InvalidCommand.h
practicum_project/Commands/OpenTableCommand/: OpenTableCommand.cpp  OpenTableCommand.h
practicum_project/Commands/PrintTableCommand/: PrintTableCommand.cpp  PrintTableCommand.h
practicum_project/TableParserMenu/: TableParserMenu.cpp  TableParserMenu.h
(+57 files in other folders)
