cmake_minimum_required(VERSION 3.24)
project(PractucumSem2)

set(CMAKE_CXX_STANDARD 17)

#add_executable(_22_02_2023_zad1 _02_22_2023/Zad1.cpp)
#add_executable(_22_02_2023_zad2 _02_22_2023/Zad2.cpp)
#add_executable(_22_02_2023_zad3 _02_22_2023/Zad3.cpp)
#
#
#add_executable(_03_01_2023_zad1 _03_01_2023/Zad1.cpp _03_22_2023/Teacher.cpp _03_22_2023/Teacher.h)
#add_executable(_03_01_2023_zad2 _03_01_2023/Zad2.cpp)
#add_executable(_03_01_2023_zad3 _03_01_2023/Zad3.cpp)
#add_executable(_03_01_2023_zad4 _03_01_2023/Zad7.cpp)
#
#add_executable(_03_07_2023_zad1 _03_07_2023/Zad1.cpp)
#add_executable(_03_07_2023_zad2 _03_07_2023/Zad2.cpp)
#
#add_executable(_03_22_2023_zad1 _03_22_2023/Zad1.cpp _03_22_2023/Teacher.cpp _03_22_2023/Teacher.h)
#add_executable(_03_22_2023_zad2 _03_22_2023/Zad2.cpp _03_22_2023/Exercise.cpp _03_22_2023/Exercise.h _03_22_2023/Test.cpp _03_22_2023/Test.h)

add_executable(dr_1_zad1 dr_1/Zad1.cpp dr_1/MarkdownTableParser.cpp dr_1/MarkdownTableParser.h dr_1/Column.h dr_1/Column.cpp dr_1/Row.h dr_1/Row.cpp dr_1/ConfigConst.h dr_1/HelperFunctions.h dr_1/HelperFunctions.cpp dr_1/Value.h dr_1/Value.cpp)
