cmake_minimum_required(VERSION 3.24)
project(PractucumSem2)

set(CMAKE_CXX_STANDARD 17)

#add_executable(_22_02_2023_zad1 _02_22_2023/Zad1.cpp)
#add_executable(_22_02_2023_zad2 _02_22_2023/Zad2.cpp)
#add_executable(_22_02_2023_zad3 _02_22_2023/Zad3.cpp)
#
#
#add_executable(_03_01_2023_zad1 _03_01_2023/Zad1.cpp _03_22_2023/Teacher.cpp _03_22_2023/Teacher.h)
#add_executable(_03_01_2023_zad2 _03_01_2023/Zad2.cpp)
#add_executable(_03_01_2023_zad3 _03_01_2023/Zad3.cpp)
#add_executable(_03_01_2023_zad4 _03_01_2023/Zad7.cpp)
#
#add_executable(_03_07_2023_zad1 _03_07_2023/Zad1.cpp)
#add_executable(_03_07_2023_zad2 _03_07_2023/Zad2.cpp)
#
#add_executable(_03_22_2023_zad1 _03_22_2023/Zad1.cpp _03_22_2023/Teacher.cpp _03_22_2023/Teacher.h)
#add_executable(_03_22_2023_zad2 _03_22_2023/Zad2.cpp _03_22_2023/Exercise.cpp _03_22_2023/Exercise.h _03_22_2023/Test.cpp _03_22_2023/Test.h)

#add_executable(dr_1_zad1 dr_1/Zad1/Zad1.cpp dr_1/Zad1/MarkdownTableParser.cpp dr_1/Zad1/MarkdownTableParser.h dr_1/Zad1/Column.h dr_1/Zad1/Column.cpp dr_1/Zad1/ConfigConst.h dr_1/Zad1/HelperFunctions.h dr_1/Zad1/HelperFunctions.cpp dr_1/Zad1/Value.h dr_1/Zad1/Value.cpp dr_1/Zad1/Menu.h dr_1/Zad1/Menu.cpp)
#add_executable(dr_1_zad2 dr_1/Zad2/Zad2.cpp dr_1/Zad2/File/File.cpp dr_1/Zad2/Consts/ConfigConsts.h dr_1/Zad2/DateTime/DateTime.h dr_1/Zad2/DateTime/DateTime.cpp dr_1/Zad2/DateTime/Date/Date.h dr_1/Zad2/DateTime/Date/Date.cpp dr_1/Zad2/DateTime/Time/Time.cpp dr_1/Zad2/FileSystem/FileSystem.h dr_1/Zad2/FileSystem/FileSystem.cpp dr_1/Zad2/RightsManager/RightsManager.h dr_1/Zad2/RightsManager/RightsGroup/RightsGroup.h dr_1/Zad2/RightsManager/RightsGroup/RightsGroup.cpp dr_1/Zad2/RightsManager/RightsManger.cpp dr_1/Zad2/SortOptions/SortOptions.h)
add_executable(_04_19_2023_zad2 _04_19_2023/Zad1.cpp _04_19_2023/ChatSystem.h _04_19_2023/User.h _04_19_2023/User.cpp _04_19_2023/ChatSystem.cpp _04_19_2023/Message.h _04_19_2023/Message.cpp)